# actionsTest

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
input/: helloWorld.txt
